# jldev_poetry

./: .dockerignore  .gitignore  Dockerfile  Makefile  Project.toml  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: CI.yml
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
dev/search/: index.html
docs/: Project.toml  make.jl
docs/src/: index.md
playground/notebook/julia/: hello.md
playground/notebook/python/: hello.md
src/: MyPkg.jl
src/pytools/: sample.py
test/: runtests.jl
test/pytools/: test_sample.py
